[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Citizen.gd" type="Script" id=1]
[ext_resource path="res://Textures/Citizen.png" type="Texture" id=2]
[ext_resource path="res://Sounds/GrayMageHurt.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/WomanScream.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 32.0

[node name="Citizen" type="Area2D" groups=["damagedByMagic"]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
frame = 3
playing = true
flip_h = true

[node name="WallDetection" type="RayCast2D" parent="AnimatedSprite"]
enabled = true
cast_to = Vector2( -5.15, 0 )

[node name="DamageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )

[node name="Scream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 1.851

[connection signal="body_entered" from="." to="." method="_on_Citizen_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
